ICpdAS/dcon_dll/driver/bcb3/i87000.h

Exp87K WORD CALLBACK DigitalOut_87K(DWORD dwBuf[], float fBuf[],
        char szSend[], char szReceive[]);
//---------------------- input -------------------------------------
// dwBuf[0];             // RS-232 port number: 1/2/3/4..../255
// dwBuf[1];             // module address: 0x00 to 0xFF
// dwBuf[2];             // module ID: 0x87054/55/56/57/60/63/64/65/66/68/41
// dwBuf[3];             // checksum: 0=disable, 1=enable
// dwBuf[4];             // TimeOut constant: normal=100
// dwBuf[5];             // 16-bit digital data to output
// dwBuf[6];             // flag: 0=no save, 1=save send/receive string
//---------------------- output ------------------------------------
                         // void



Exp87K WORD CALLBACK DigitalBitOut_87K(DWORD dwBuf[], float fBuf[],
        char szSend[], char szReceive[]);
//---------------------- input -------------------------------------
// dwBuf[0];             // RS-232 port number: 1/2/3/4..../255
// dwBuf[1];             // module address: 0x00 to 0xFF
// dwBuf[2];             // module ID: 0x87054/55/56/57/60/63/64/65/66/68/41
// dwBuf[3];             // checksum: 0=disable, 1=enable
// dwBuf[4];             // TimeOut constant: normal=100
// dwBuf[5];             // don't care
// dwBuf[6];             // flag: 0=no save, 1=save send/receive string
// dwBuf[7];             // which channel to output
// dwBuf[8];             // data to output (0 or 1)
//---------------------- output ------------------------------------
                         // void



Exp87K WORD CALLBACK DigitalIn_87K(DWORD dwBuf[], float fBuf[],
        char szSend[], char szReceive[]);
//---------------------- input -------------------------------------
// dwBuf[0];             // RS-232 port number: 1/2/3/4..../255
// dwBuf[1];             // module address: 0x00 to 0xFF
// dwBuf[2];             // module ID:  0x87054/55/56/57/60/63/64/65/66/68/40
// dwBuf[3];             // checksum: 0=disable, 1=enable
// dwBuf[4];             // TimeOut constant: normal=100
// dwBuf[5];             // 16-bit digital data to output
// dwBuf[6];             // flag: 0=no save, 1=save send/receive string
//---------------------- output ------------------------------------
                         // void



Exp87K WORD CALLBACK DigitalInCounterRead_87K(DWORD dwBuf[], float fBuf[],
        char szSend[], char szReceive[]);
//---------------------- input -------------------------------------
// dwBuf[0];             // RS-232 port number: 1/2/3/4..../255
// dwBuf[1];             // module address: 0x00 to 0xFF
// dwBuf[2];             // module ID: 0x87051/52/53/54/55/63/40
// dwBuf[3];             // checksum: 0=disable, 1=enable
// dwBuf[4];             // TimeOut constant: normal=100
// dwBuf[5];             // Channel Number
// dwBuf[6];             // flag: 0=no save, 1=save send/receive string
//---------------------- output ------------------------------------
// dwBuf[7];			 //Counter Value of Channel N's Digital Input


Exp87K WORD CALLBACK ClearDigitalInCounter_87K(DWORD dwBuf[], float fBuf[],
        char szSend[], char szReceive[]);
//---------------------- input -------------------------------------
// dwBuf[0];             // RS-232 port number: 1/2/3/4..../255
// dwBuf[1];             // module address: 0x00 to 0xFF
// dwBuf[2];             // module ID: 0x87051/52/53/54/55/63/40
// dwBuf[3];             // checksum: 0=disable, 1=enable
// dwBuf[4];             // TimeOut constant: normal=100
// dwBuf[5];             // Channel Number
// dwBuf[6];             // flag: 0=no save, 1=save send/receive string


Exp87K WORD CALLBACK DigitalInLatch_87K(DWORD dwBuf[], float fBuf[],
        char szSend[], char szReceive[]);
//---------------------- input -------------------------------------
// dwBuf[0];             // RS-232 port number: 1/2/3/4..../255
// dwBuf[1];             // module address: 0x00 to 0xFF
// dwBuf[2];             // module ID: 0x87051/52/53/54/55/63/40
// dwBuf[3];             // checksum: 0=disable, 1=enable
// dwBuf[4];             // TimeOut constant: normal=100
// dwBuf[5];             // 0: Latch Low,   1: Latch High
// dwBuf[6];             // flag: 0=no save, 1=save send/receive string
//---------------------- output ------------------------------------
// dwBuf[7];             // latch value


Exp87K WORD CALLBACK ClearDigitalInLatch_87K(DWORD dwBuf[], float fBuf[],
        char szSend[], char szReceive[]);
//---------------------- input -------------------------------------
// dwBuf[0];             // RS-232 port number: 1/2/3/4..../255
// dwBuf[1];             // module address: 0x00 to 0xFF
// dwBuf[2];             // module ID: 0x87051/52/53/54/55/63/40
// dwBuf[3];             // checksum: 0=disable, 1=enable
// dwBuf[4];             // TimeOut constant: normal=100
// dwBuf[5];             // Don't care
// dwBuf[6];             // flag: 0=no save, 1=save send/receive string


Exp87K WORD CALLBACK DigitalOutReadBack_87K(DWORD dwBuf[], float fBuf[],
        char szSend[], char szReceive[]);
   
//---------------------- input -------------------------------------
//dwBuf[0];		// RS-232 port number: 1/2/3/4/..../255
//dwBuf[1];		// module address: 0x00 to 0xFF
//dwBuf[2];		// module ID: 0x7080 ,0x87082 ,0x8080
//dwBuf[3];		// checksum: 0=disable, 1=enable
//dwBuf[4];		// TimeOut constant: normal=100
//dwBuf[5];		// channel number
//dwBuf[6];		// flag: 0=no save, 1=save send/receive string
//dwBuf[7];		// wSlot: Slot number 0 ~ 7
// ----------------------- output -----------------------------------------
//dwBuf[8];		// Counter or Frequency Status
            
  Exp87K WORD CALLBACK ReadOutputAlarmState_87K(DWORD dwBuf[], float fBuf[],
        char szSend[], char szReceive[]);
   //---------------------- input -------------------------------------
   // wPort=(char)dwBuf[0];   // RS-232 port number: 1/2/3/4/..../255
   // wAddr=(WORD)dwBuf[1];         // module address: 0x00 to 0xFF
   // wID=dwBuf[2];           // module ID: 0x7011/12/14/16
   // wCheckSum=(WORD)dwBuf[3];     // checksum: 0=disable, 1=enable
   // wTimeOut=(WORD)dwBuf[4];      // TimeOut constant: normal=100
   //  wCounter=dwBuf[5];      // Don't Care
   // wFlag=(char)dwBuf[6];   // flag: 0=no save, 1=save send/receive string
   //---------------------- output ------------------------------------
   //               Alarm State:
   // dwBuf(7):0       Disable  'for 87005 dwBuf(7) not define
   // dwBuf(7):1       Momentary
   // dwBuf(7):2       Latch
   //               Digital Output //for 87005 dwBuf(8) is the 6 channel DO output value
   // dwBuf(8):0       Bit:1 Disable  Bit 0: Disable
   // dwBuf(8):1       Bit:1 Disable  Bit 0: Enable
   // dwBuf(8):2       Bit:1 Enable   Bit 0: Disable
   // dwBuf(8):3       Bit:1 Enable   Bit 0: Enable                           

  Exp87K WORD CALLBACK ReadAlarmLimitValue_87K(DWORD dwBuf[], float fBuf[],
        char szSend[], char szReceive[]);
   //---------------------- input -------------------------------------
   //wPort=(char)dwBuf[0];   // RS-232 port number: 1/2/3/4/..../255
   //wAddr=(WORD)dwBuf[1];         // module address: 0x00 to 0xFF
   //wID=dwBuf[2];           // module ID: 0x7011
   //wCheckSum=(WORD)dwBuf[3];     // checksum: 0=disable, 1=enable
   //wTimeOut=(WORD)dwBuf[4];      // TimeOut constant: normal=100
   //wHiLo=(WORD)dwBuf[5];         // 0: Lo Alarm    1: High Alarm
   //wFlag=(char)dwBuf[6];   // flag: 0=no save, 1=save send/receive string
   //channel=(char)dwBuf[7] & 0x0f;

   //---------------------- output -------------------------------------
   //fValue=fBuf[0];      // Alarm Limit Value
   //dwBuf[8]              // alarm Type 0: Disable 1: momentary 2: latch
   //dwBuf[9]			  // alarm to DO channel



  Exp87K  WORD CALLBACK ReadEventCounter_87K(DWORD dwBuf[], float fBuf[],
        char szSend[], char szReceive[]);
 
   //---------------------- input -----------------------------------
   //wPort=(char)dwBuf[0];   // RS-232 port number: 1/2/3/4/..../255
   //wAddr=(WORD)dwBuf[1];         // module address: 0x00 to 0xFF
   //wID=dwBuf[2];           // module ID: 0x7011
   //wCheckSum=(WORD)dwBuf[3];     // checksum: 0=disable, 1=enable
   //wTimeOut=(WORD)dwBuf[4];      // TimeOut constant: normal=100   
   //wFlag=(char)dwBuf[6];   // flag: 0=no save, 1=save send/receive string
   //---------------------- output ----------------------------------
   // wCount=wBuf[7];     // The Event Counter Value


   Exp87K WORD CALLBACK ClearEventCounter_87K(DWORD dwBuf[], float fBuf[],
        char szSend[], char szReceive[]);
   //---------------------- input -----------------------------------
   //wPort=(char)dwBuf[0];   // RS-232 port number: 1/2/3/4/..../255
   //wAddr=(WORD)dwBuf[1];         // module address: 0x00 to 0xFF
   //wID=dwBuf[2];           // module ID: 0x7011
   //wCheckSum=(WORD)dwBuf[3];     // checksum: 0=disable, 1=enable
   //wTimeOut=(WORD)dwBuf[4];      // TimeOut constant: normal=100   
   //wFlag=(char)dwBuf[6];   // flag: 0=no save, 1=save send/receive string


   Exp87K WORD CALLBACK SetAlarmLimitValue_87K(DWORD dwBuf[], float fBuf[],
        char szSend[], char szReceive[]);
   //---------------------- input -------------------------------------
   //wPort=(char)dwBuf[0];   // RS-232 port number: 1/2/3/4/..../255
   //wAddr=(WORD)dwBuf[1];         // module address: 0x00 to 0xFF
   //wID=dwBuf[2];           // module ID: 0x7011
   //wCheckSum=(WORD)dwBuf[3];     // checksum: 0=disable, 1=enable
   //wTimeOut=(WORD)dwBuf[4];      // TimeOut constant: normal=100
   //wHiLo=(WORD)dwBuf[5];         // 0: Lo Alarm    1: High Alarm
   //wFlag=(char)dwBuf[6];   // flag: 0=no save, 1=save send/receive string
   //wRangeCode=(WORD)dwBuf[7];
   //channel=(char)dwBuf[8] & 0x0f; //for 7005 AI channel
   //DOChannel=(char)dwBuf[9] & 0x06;// for 7005 alarm map to DO channel
   //alarmType=(char)dwBuf[10];    //alarmType=1: ==>'M' for momentary alarm 2==>'L' for latch alarm
   //fValue=fBuf[0];        // Alarm Limit Value


    Exp87K WORD CALLBACK EnableAlarm_87K(DWORD dwBuf[], float fBuf[],
        char szSend[], char szReceive[]);
   //---------------------- input -------------------------------------
   //wPort=(char)dwBuf[0];   // RS-232 port number: 1/2/3/4/..../255
   //wAddr=(WORD)dwBuf[1];         // module address: 0x00 to 0xFF
   //wID=dwBuf[2];           // module ID: 0x7011
   //wCheckSum=(WORD)dwBuf[3];     // checksum: 0=disable, 1=enable
   //wTimeOut=(WORD)dwBuf[4];      // TimeOut constant: normal=100
   //wAlarmMode=(WORD)dwBuf[5];    // 0: Momentary,  1: Latch
   //wFlag=(char)dwBuf[6];   // flag: 0=no save, 1=save send/receive string


	Exp87K WORD CALLBACK DisableAlarm_87K(DWORD dwBuf[], float fBuf[],
        char szSend[], char szReceive[]);
   //---------------------- input -------------------------------------
   //wPort=(char)dwBuf[0];   // RS-232 port number: 1/2/3/4/..../255
   //wAddr=(WORD)dwBuf[1];         // module address: 0x00 to 0xFF
   //wID=dwBuf[2];           // module ID: 0x7011
   //wCheckSum=(WORD)dwBuf[3];     // checksum: 0=disable, 1=enable
   //wTimeOut=(WORD)dwBuf[4];      // TimeOut constant: normal=100
   //wHiLo = (WORD)dwBuf[5];   // wHiLo:1 : H:high alarm and 0: L:low alarm
   //wFlag=(char)dwBuf[6];   // flag: 0=no save, 1=save send/receive string
   //channel=(char)dwBuf[7] & 0x0f ;

   Exp87K WORD CALLBACK ClearLatchAlarm_87K(DWORD dwBuf[], float fBuf[],
        char szSend[], char szReceive[]);
   //---------------------- input -------------------------------------
   //wPort=(char)dwBuf[0];   // RS-232 port number: 1/2/3/4/..../255
   //wAddr=(WORD)dwBuf[1];         // module address: 0x00 to 0xFF
   //wID=dwBuf[2];           // module ID: 0x7011
   //wCheckSum=(WORD)dwBuf[3];     // checksum: 0=disable, 1=enable
   //wTimeOut=(WORD)dwBuf[4];      // TimeOut constant: normal=100
   //wHiLo = (WORD)dwBuf[5];   // alarmMode:H:high alarm and L:low alarm
   //wFlag=(char)dwBuf[6];   // flag: 0=no save, 1=save send/receive string
   //channel=(char)dwBuf[7] & 0x0f ;

   Exp87K WORD CALLBACK EnableLinearMapping_87K(DWORD dwBuf[], float fBuf[],
        char szSend[], char szReceive[]);
   //---------------------- input -------------------------------------
   //wPort=(char)dwBuf[0];   // RS-232 port number: 1/2/3/4/..../255
   //wAddr=(WORD)dwBuf[1];         // module address: 0x00 to 0xFF
   //wID=dwBuf[2];           // module ID: 0x7014, 0x7016
   //wCheckSum=(WORD)dwBuf[3];     // checksum: 0=disable, 1=enable
   //wTimeOut=(WORD)dwBuf[4];      // TimeOut constant: normal=100
   // wBuf[5] don't care
   //wFlag=(char)dwBuf[6];   // flag: 0=no save, 1=save send/receive string


  Exp87K WORD CALLBACK DisableLinearMapping_87K(DWORD dwBuf[], float fBuf[],
        char szSend[], char szReceive[]);
   //---------------------- input -------------------------------------
   //wPort=(char)dwBuf[0];   // RS-232 port number: 1/2/3/4/..../255
   //wAddr=(WORD)dwBuf[1];         // module address: 0x00 to 0xFF
   //wID=dwBuf[2];           // module ID: 0x7014, 0x7016
   //wCheckSum=(WORD)dwBuf[3];     // checksum: 0=disable, 1=enable
   //wTimeOut=(WORD)dwBuf[4];      // TimeOut constant: normal=100
   // wBuf[5] don't care
   //wFlag=(char)dwBuf[6];   // flag: 0=no save, 1=save send/receive string


   Exp87K WORD CALLBACK ReadLinearMappingStatus_87K(DWORD dwBuf[], float fBuf[],
        char szSend[], char szReceive[]);
   //---------------------- input -----------------------------------
   //wPort=(char)dwBuf[0];   // RS-232 port number: 1/2/3/4/..../255
   //wAddr=(WORD)dwBuf[1];         // module address: 0x00 to 0xFF
   //wID=(WORD)dwBuf[2];           // module ID: 0x7014, 0x7016
   //wCheckSum=(WORD)dwBuf[3];     // checksum: 0=disable, 1=enable
   //wTimeOut=(WORD)dwBuf[4];      // TimeOut constant: normal=100  
   //wFlag=(char)dwBuf[6];   // flag: 0=no save, 1=save send/receive string




   Exp87K WORD CALLBACK ReadSourceValueOfLM_87K(DWORD dwBuf[], float fBuf[],
        char szSend[], char szReceive[]);
   //---------------------- input -------------------------------------
   //wPort=(char)dwBuf[0];  // RS-232 port number: 1/2/3/4/..../255
   //wAddr=(WORD)dwBuf[1];        // module address: 0x00 to 0xFF
   //wID=dwBuf[2];          // module ID: 0x7014/16
   //wCheckSum=(WORD)dwBuf[3];    // checksum: 0=disable, 1=enable
   //wTimeOut=(WORD)dwBuf[4];     // TimeOut constant: normal=100
   //wFlag=(char)dwBuf[6];  // flag: 0=no save, 1=save send/receive string
   //---------------------- output ------------------------------------
   // fBuf[0]= Low Source Value
   // fBuf[1]= High Source Value


  Exp87K WORD CALLBACK ReadTargetValueOfLM_87K(DWORD dwBuf[], float fBuf[],
        char szSend[], char szReceive[]);
   //---------------------- input -------------------------------------
   //wPort=(char)dwBuf[0];  // RS-232 port number: 1/2/3/4/..../255
   //wAddr=(WORD)dwBuf[1];        // module address: 0x00 to 0xFF
   //wID=dwBuf[2];          // module ID: 0x7014/16
   //wCheckSum=(WORD)dwBuf[3];    // checksum: 0=disable, 1=enable
   //wTimeOut=(WORD)dwBuf[4];     // TimeOut constant: normal=100
   //wFlag=(char)dwBuf[6];  // flag: 0=no save, 1=save send/receive string
   //---------------------- output ------------------------------------
   // fBuf[0]= Low Target Value
   // fBuf[1]= High Target Value

   Exp87K WORD CALLBACK DigitalOut_87016(DWORD dwBuf[], float fBuf[],
        char szSend[], char szReceive[]);