ICpdAS/dcon_dll/driver/vb5/i7000.bas


Declare Function DigitalInCounterRead_87K Lib "I7000.dll" (dwBuf As Long, fBuf As Single, ByVal SendTo8000 As String, ByVal ReceiveFrom8000 As String) As Integer
Declare Function ClearDigitalInCounter_87K Lib "I7000.dll" (dwBuf As Long, fBuf As Single, ByVal SendTo8000 As String, ByVal ReceiveFrom8000 As String) As Integer
Declare Function DigitalInLatch_87K Lib "I7000.dll" (dwBuf As Long, fBuf As Single, ByVal SendTo8000 As String, ByVal ReceiveFrom8000 As String) As Integer
Declare Function ClearDigitalInLatch_87K Lib "I7000.dll" (dwBuf As Long, fBuf As Single, ByVal SendTo8000 As String, ByVal ReceiveFrom8000 As String) As Integer
Declare Function DigitalOut_87K Lib "I7000.dll" (dwBuf As Long, fBuf As Single, ByVal SendTo8000 As String, ByVal ReceiveFrom8000 As String) As Integer
Declare Function DigitalOutReadBack_87K Lib "I7000.dll" (dwBuf As Long, fBuf As Single, ByVal SendTo8000 As String, ByVal ReceiveFrom8000 As String) As Integer
Declare Function DigitalIn_87K Lib "I7000.dll" (dwBuf As Long, fBuf As Single, ByVal SendTo8000 As String, ByVal ReceiveFrom8000 As String) As Integer
Declare Function DigitalBitOut_87K Lib "I7000.dll" (w7000 As Long, f7000 As Single, ByVal SendTo7000 As String, ByVal ReceiveFrom7000 As String) As Integer
Declare Function ReadOutputAlarmState_87K Lib "I7000.dll" (dwBuf As Long, f7000 As Single, ByVal SendTo7000 As String, ByVal ReceiveFrom7000 As String) As Integer
Declare Function SetAlarmLimitValue_87K Lib "I7000.dll" (dwBuf As Long, f7000 As Single, ByVal SendTo7000 As String, ByVal ReceiveFrom7000 As String) As Integer
Declare Function ReadAlarmLimitValue_87K Lib "I7000.dll" (dwBuf As Long, f7000 As Single, ByVal SendTo7000 As String, ByVal ReceiveFrom7000 As String) As Integer
Declare Function ReadEventCounter_87K Lib "I7000.dll" (dwBuf As Long, f7000 As Single, ByVal SendTo7000 As String, ByVal ReceiveFrom7000 As String) As Integer
Declare Function ClearEventCounter_87K Lib "I7000.dll" (dwBuf As Long, f7000 As Single, ByVal SendTo7000 As String, ByVal ReceiveFrom7000 As String) As Integer
Declare Function EnableAlarm_87K Lib "I7000.dll" (dwBuf As Long, f7000 As Single, ByVal SendTo7000 As String, ByVal ReceiveFrom7000 As String) As Integer
Declare Function DisableAlarm_87K Lib "I7000.dll" (dwBuf As Long, f7000 As Single, ByVal SendTo7000 As String, ByVal ReceiveFrom7000 As String) As Integer
Declare Function ClearLatchAlarm_87K Lib "I7000.dll" (dwBuf As Long, f7000 As Single, ByVal SendTo7000 As String, ByVal ReceiveFrom7000 As String) As Integer

Declare Function SetupLinearMapping_87K Lib "I7000.dll" (dwBuf As Long, f7000 As Single, ByVal SendTo7000 As String, ByVal ReceiveFrom7000 As String) As Integer
Declare Function DisableLinearMapping_87K Lib "I7000.dll" (dwBuf As Long, f7000 As Single, ByVal SendTo7000 As String, ByVal ReceiveFrom7000 As String) As Integer
Declare Function EnableLinearMapping_87K Lib "I7000.dll" (dwBuf As Long, f7000 As Single, ByVal SendTo7000 As String, ByVal ReceiveFrom7000 As String) As Integer
Declare Function ReadLinearMappingStatus_87K Lib "I7000.dll" (dwBuf As Long, f7000 As Single, ByVal SendTo7000 As String, ByVal ReceiveFrom7000 As String) As Integer
Declare Function ReadSourceValueOfLM_87K Lib "I7000.dll" (dwBuf As Long, f7000 As Single, ByVal SendTo7000 As String, ByVal ReceiveFrom7000 As String) As Integer
Declare Function ReadTargetValueOfLM_87K Lib "I7000.dll" (dwBuf As Long, f7000 As Single, ByVal SendTo7000 As String, ByVal ReceiveFrom7000 As String) As Integer
Declare Function DigitalOut_87016 Lib "I7000.dll" (dwBuf As Long, f7000 As Single, ByVal SendTo7000 As String, ByVal ReceiveFrom7000 As String) As Integer

Declare Function FloatToHex Lib "I7000.dll" (ByVal fv As Single) As Long


' function for WDT
Declare Function HostIsOK Lib "I7000.dll" (w7000 As Integer, f7000 As Single, ByVal SendTo7000 As String, ByVal ReceiveFrom7000 As String) As Integer

'--- Read the module reset status, $AA5 --------*/
Declare Function ReadModuleResetStatus Lib "I7000.dll" (w7000 As Integer, f7000 As Single, ByVal SendTo7000 As String, ByVal ReceiveFrom7000 As String) As Integer


'--- To setup host watchdog, ~AA3ETT --------*/
Declare Function ToSetupHostWatchdog Lib "I7000.dll" (w7000 As Integer, f7000 As Single, ByVal SendTo7000 As String, ByVal ReceiveFrom7000 As String) As Integer


'--- To read host watchdog setup value, ~AA2 --------*/
Declare Function ToReadHostWatchdog Lib "I7000.dll" (w7000 As Integer, f7000 As Single, ByVal SendTo7000 As String, ByVal ReceiveFrom7000 As String) As Integer





'--- Read the module status about the host watchdog, ~AA0 --------*/
Declare Function ReadModuleHostWatchdogStatus Lib "I7000.dll" (w7000 As Integer, f7000 As Single, ByVal SendTo7000 As String, ByVal ReceiveFrom7000 As String) As Integer


'--- Reset the module status about the host watchdog, ~AA1 --------*/
Declare Function ResetModuleHostWatchdogStatus Lib "I7000.dll" (w7000 As Integer, f7000 As Single, ByVal SendTo7000 As String, ByVal ReceiveFrom7000 As String) As Integer

'function for 7000 AO
Declare Function SetPowerOnValueForAo Lib "I7000.dll" (w7000 As Integer, f7000 As Single, ByVal SendTo7000 As String, ByVal ReceiveFrom7000 As String) As Integer
Declare Function SetSafeValueForAo Lib "I7000.dll" (w7000 As Integer, f7000 As Single, ByVal SendTo7000 As String, ByVal ReceiveFrom7000 As String) As Integer

